Sat May 15 03:15:49 MEST 1999 Sven Neumann <sven@gimp.org>

	* app/paint_core.c: Works even better if the cursor position is
	correctly transformed ;-)

Sat May 15 01:55:12 MEST 1999 Sven Neumann <sven@gimp.org>

	* app/menus.c: Moved the seperator down so that it seperates the MRU
	dialog from the rest.
	* app/paint_core.c: Show the line you are drawing when using <Shift>
	on paint_tools. Still need to figure out what's different about the
	clone tool...
	* app/blend.c
	* app/cursorutil.c
	* app/paintbrush.c: a little bit of code cleanup while I was on it

Sat May 15 00:06:06 BST 1999 Andy Thomas <alt@gimp.org>

	* app/gdisplay.c
	* app/paths_dialog.c
	* app/paths_dialog.h

	Fixed problem where paths preview not resized correctly when
	image was resized.

1999-05-13  Jay Cox  <jaycox@earthlink.net>

	* app/pencil.c: use the new color picking feature of paint_core.

Thu May 13 22:41:26 BST 1999 Andy Thomas <alt@gimp.org>

	Changed:-
	* app/bezier_select.c
	* app/bezier_selectP.h
	* app/cursorutil.c
	* app/cursorutil.h
	* app/curves.c
	* app/paths_dialog.c

	New:- 
	* cursor/mouse1_ap
	* cursor/mouse1_apmsk
	* cursor/mouse1_cp
	* cursor/mouse1_cpmsk
	* cursor/mouse1_mm
	* cursor/mouse1_mmmsk
	* cursor/mouse1_sel
	* cursor/mouse1_selm
	* cursor/mouse1_selmmsk
	* cursor/mouse1_selmsk
	* cursor/mouse1_selp
	* cursor/mouse1_selpmsk

	Paths changes:-
	Implemented multi-part paths. 
	(Import the path (RMB in paths dialog brings menu up) 
	http://www.picnic.demon.co.uk/tmp/gimp.path 
	into a 600x256 (WxH) for an example).

	Can copy/paste paths. 
	Fully custom cursors when using the Bezier tool. A number of bug 
	fixes re boundary problems also fixed.

	Note that heavy use is made of the modifier keys in the bezier tool.
	MB1 inside a closed curve converts it to a selection. The modifiers
	change how the selection interacts with any current selection (in
	much the same way as the selection tool does).

	MB1 + ALT on control point will move a curve, if shift modifier active